[fix] UserService